--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-enterprise-app</title>
+    <meta name="description" content="Enterprise Solutions - Leading provider of enterprise-grade technology solutions" />
+    <meta name="keywords" content="enterprise, solutions, technology, software, development" />
+    <meta name="author" content="Enterprise Solutions" />
+    <title>Enterprise Solutions - Innovation Meets Excellence</title>
   </head>
   <body>
     <div id="root"></div>
